added delete method and notification bool
